--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^2.0.1",
     "bootstrap": "^5.1.3",
     "gatsby": "^4.1.0",
@@ -12,13 +14,14 @@
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-manifest": "^4.1.0",
+    "gatsby-plugin-mdx": "^3.3.0",
     "gatsby-plugin-offline": "^5.1.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sass": "^5.1.1",
     "gatsby-plugin-sharp": "^4.1.0",
     "gatsby-plugin-sitemap": "^5.3.0",
     "gatsby-plugin-styled-components": "^5.2.0",
-    "gatsby-source-filesystem": "^4.1.0",
+    "gatsby-source-filesystem": "^4.3.0",
     "gatsby-transformer-sharp": "^4.1.0",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
